<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">

    <TextView android:text="@string/view_login" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:id="@+id/view_cad" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/text_usuario"
        android:layout_above="@+id/text_senha"
        android:layout_alignLeft="@+id/text_senha"
        android:layout_alignStart="@+id/text_senha"
        android:layout_marginBottom="44dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/text_senha"
        android:layout_marginBottom="55dp"
        android:layout_above="@+id/bt_entrar"
        android:layout_toRightOf="@+id/view_cad"
        android:layout_toEndOf="@+id/view_cad" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_entrar"
        android:id="@+id/bt_entrar"
        android:layout_marginRight="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="160dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/text_senha"
        android:layout_alignEnd="@+id/text_senha"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_senha"
        android:id="@+id/view_senha"
        android:layout_below="@+id/text_usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_usuario"
        android:id="@+id/view_usuario"
        android:layout_alignTop="@+id/text_usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_cadastrar"
        android:id="@+id/view_cadastrar"
        android:layout_marginTop="70dp"
        android:layout_alignTop="@+id/bt_entrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cadastro"
        android:id="@+id/bt_cadastro"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/view_cadastrar"
        android:layout_alignLeft="@+id/text_senha"
        android:layout_alignStart="@+id/text_senha" />
</RelativeLayout>
